# tilepack

./: .gitignore  README.md  gen_tms_tilemap.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Anbar_TMS/: anbar.html  tilemap.json  tilemapresource.xml
docs/: index.md  usage.md
src/tms_packager/: __main__.py  cli.py  convert.py  selftest.py  serve.py  tms_utils.py
tests/: conftest.py  test_cli.py  test_convert.py  test_serve.py  test_tms_utils.py  test_wmts_utils.py
tilepack/: __main__.py  cli.py  convert.py  selftest.py  serve.py  tms_utils.py  verify.py  wmts_utils.py
tms_packager/: serve.py  verify.py
