[project]
name = "tilepack"
version = "0.1.0"
description = "Convert TMS tile folders to MBTiles/PMTiles and serve them as TMS/WMTS endpoints"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pmtiles>=3.4",
    "httpx>=0.27",
]

[project.scripts]
tilepack = "tilepack.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
