[project]
name = "tilepack"
version = "0.1.0"
description = "Convert TMS tile folders to MBTiles/PMTiles and serve them as TMS/WMTS endpoints"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pmtiles>=3.4",
    "httpx>=0.27",
]

[project.scripts]
tilepack = "tilepack.cli:cli"

[dependency-groups]
dev = ["ruff>=0.9", "ty>=0.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tilepack/tms_utils.py" = ["E501"]  # XML template strings
