[project]
name = "tilepack"
version = "0.1.0"
description = "Convert TMS tile folders to MBTiles/PMTiles and serve them as TMS/WMTS endpoints"
authors = [{ name = "Ashwin Nair", email = "ashnair0007@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
]
keywords = ["tiles", "mbtiles", "pmtiles", "tms", "wmts", "gis", "mapping", "geospatial"]
dependencies = [
    "click>=8.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pmtiles>=3.4",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ashnair1/tilepack"
Repository = "https://github.com/ashnair1/tilepack"

[project.scripts]
tilepack = "tilepack.cli:cli"

[dependency-groups]
dev = ["ruff>=0.9", "ty>=0.0.2", "pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tilepack/tms_utils.py" = ["E501"]  # XML template strings
